[metadata]
name = flaskr
version = 1.0.0
url = https://localhost
license = MIT
maintainer = xin
maintainer_email = chenxin.az@outlook.com
description = merge several clash config into one
long_description = file: README.md
long_description_content_type = text/x-markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
